# MTD-AI-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  BLOCKERS.md  CLAUDE.md  CONTRACT.md  DASHBOARD_PLAN.md  LOG.md  Makefile  PLAN.md  README.md  V2_PLAN.md  pyproject.toml
dashboard/: app.py  data.py  session.py
evals/cases/: domestic_standard.csv  domestic_standard.labels.json  mixed_rates.csv  mixed_rates.labels.json  rounding_edge.csv  rounding_edge.labels.json
evals/guardrails/: cases.json
evals/intake/: cases.json
evals/reviewer/: cases.json
evals/routing/: cases.json
examples/: README.md  hard_adversarial.csv  hard_ambiguous.csv  hard_edge_cases.csv  hard_large_mixed.csv  hard_reduced_rate.csv  poisoned_transactions.csv  sample_transactions.csv
scripts/: intake_demo.py  show_audit.py
skills/hmrc/2026-27/: flat-rate-scheme.md  vat-rates.md  vat-scope.md
src/mtd_agent/: __init__.py  audit.py  cli.py  config.py  eval_harness.py  guardrails.py  guardrails_eval.py  intake_eval.py  interfaces.py  models.py  reviewer_eval.py  routing_eval.py
src/mtd_agent/graph/: __init__.py  build.py  pipeline.py  (+1 more)
tests/: test_compute_vat.py  test_evals.py  test_fake_client.py  test_guardrails.py  test_hardening.py  test_ingest.py  test_intake.py  test_intake_eval.py  test_models.py  test_no_llm_figures.py  test_pipeline.py  test_sandbox_guard.py  test_schemes.py  test_tracing_config.py
tests/dashboard/: test_app.py  test_data.py  test_session.py
tests/hmrc/: test_vat_client.py
tests/reviewer/: test_batch.py  test_reviewer.py  test_reviewer_eval.py  test_skills.py
(+21 files in other folders)
