[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtd-agent"
version = "0.1.0"
description = "AI agent that prepares and files UK VAT returns via the HMRC MTD sandbox (deterministic core, expert HITL, idempotent submit, audited)."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "openai>=1.40",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "streamlit>=1.38",   # the self-hosted console (dashboard/)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
